Some CMakeLists.txt cleanup
Remove more of the obsolete stuff.

--- a/src/conio/CMakeLists.txt
+++ b/src/conio/CMakeLists.txt
@@ -1,6 +1,6 @@
-project (ConIOLib C)
-
 cmake_minimum_required(VERSION 3.11)
+
+project (ConIOLib C)
 
 set(WITHOUT_GDI OFF CACHE BOOL "Disable GDI video support")
 set(WITHOUT_SDL OFF CACHE BOOL "Disable SDL video support")
@@ -9,31 +9,31 @@ set(WITHOUT_XRANDR OFF CACHE BOOL "Disable X11 video support")
 set(WITHOUT_XRENDER OFF CACHE BOOL "Disable X11 video support")
 set(WITHOUT_XINERAMA OFF CACHE BOOL "Disable X11 video support")
 
-INCLUDE (CheckFunctionExists)
+INCLUDE (CheckSymbolExists)
+find_package(Threads REQUIRED)
 if(NOT WITHOUT_X11)
 	find_package(X11)
 endif()
+
 # So on BSD, this causes the find to fail.  However, it's required for Linux
 # This is because on BSD, ncursesw.h does not exist, but libraries use
 # ncurses.h
 set(CURSES_NEED_WIDE TRUE)
-find_package(Threads REQUIRED)
-if(NOT WIN32)
-	find_package(Curses)
-	find_package(PkgConfig)
-	if(NOT WITHOUT_SDL)
-		pkg_check_modules(SDL2 sdl2)
+find_package(Curses)
+
+find_package(PkgConfig)
+if(NOT WITHOUT_SDL)
+	find_package(SDL2 CONFIG PATHS /Library/Frameworks)
+endif()
+if(NOT WITHOUT_X11)
+	if(NOT WITHOUT_XRENDER)
+		pkg_check_modules(XRENDER xrender)
 	endif()
-	if(NOT WITHOUT_X11)
-		if(NOT WITHOUT_XRENDER)
-			pkg_check_modules(XRENDER xrender)
-		endif()
-		if(NOT WITHOUT_XINERAMA)
-			pkg_check_modules(XINERAMA xinerama)
-		endif()
-		if(NOT WITHOUT_XRANDR)
-			pkg_check_modules(XRANDR xrandr)
-		endif()
+	if(NOT WITHOUT_XINERAMA)
+		pkg_check_modules(XINERAMA xinerama)
+	endif()
+	if(NOT WITHOUT_XRANDR)
+		pkg_check_modules(XRANDR xrandr)
 	endif()
 endif()
 
@@ -66,16 +66,16 @@ if(WIN32)
 	list(APPEND SOURCE ciolib.rc)
 endif()
 
-if(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-	if(CURSES_FOUND)
+if(CURSES_FOUND)
+	list(APPEND SOURCE curs_cio.c)
+	set(USE_CURSES_ANYWAY TRUE)
+else()
+	if(${CMAKE_SYSTEM_NAME} MATCHES "(Free|Open|Net)BSD")
 		list(APPEND SOURCE curs_cio.c)
 		set(USE_CURSES_ANYWAY TRUE)
 	else()
-		if(${CMAKE_SYSTEM_NAME} MATCHES "(Free|Open|Net)BSD")
-			list(APPEND SOURCE curs_cio.c)
-			set(USE_CURSES_ANYWAY TRUE)
-		else()
-			message(FATAL_ERROR "ncursesw not found")
+		if(NOT WIN32)
+			message(FATAL_ERROR "No wide-capable curses found")
 		endif()
 	endif()
 endif()
@@ -84,29 +84,19 @@ if(NOT WITHOUT_X1!)
 	if(X11_FOUND)
 		list(APPEND SOURCE x_events.c x_cio.c)
 		set(NEED_BITMAP TRUE)
-		set(NEED_DLOPEN TRUE)
 		set(NEED_SCALE TRUE)
 	endif()
 endif()
 
 if(NOT WITHOUT_SDL)
-	if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-		if(NOT SDL2_FOUND)
-			find_library(SDL2_LIBRARY SDL2)
-			if(SDL2_LIBRARY)
-				set(SDL2_FOUND ON)
-			endif()
-		endif()
-	endif()
 	if(SDL2_FOUND)
 		list(APPEND SOURCE sdl_con.c)
 		list(APPEND SOURCE sdlfuncs.c)
-		set(NEED_SCALE TRUE)
 		if(WIN32)
 			list(APPEND SOURCE SDL_win32_main.c)
 		endif()
 		set(NEED_BITMAP TRUE)
-		set(NEED_DLOPEN TRUE)
+		set(NEED_SCALE TRUE)
 	endif()
 endif()
 
@@ -118,14 +108,10 @@ if(NEED_SCALE)
 	list(APPEND SOURCE scale.c xbr.c)
 endif()
 
+check_symbol_exists(vasprintf stdio.h HAVE_VASPRINTF) 
+
 add_library(ciolib OBJECT ${SOURCE})
 target_include_directories(ciolib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-if(CURSES_FOUND)
-	if(${CMAKE_SYSTEM_NAME} MATCHES "(Free|Open|Net)BSD")
-		list(APPEND SOURCE curs_cio.c)
-		set(USE_CURSES_ANYWAY TRUE)
-	endif()
-endif()
 
 if(WITHOUT_X11)
 	target_compile_definitions(ciolib PRIVATE NO_X)
@@ -151,26 +137,17 @@ else()
 	else()
 		target_compile_definitions(ciolib PRIVATE NO_X)
 		target_compile_definitions(ciolib PUBLIC DISABLE_X11=1)
-		message(WARNING "libx11 not found, X11 support disabled")
-		set(WITHOUT_X11 ON CACHE BOOL "Disable X11 video support")
+		set(WITHOUT_X11 ON CACHE BOOL "Disable X11 video support" FORCE)
 	endif()
 endif()
 
 if(NOT WITHOUT_SDL)
-	if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-		if(SDL2_LIBRARY)
-			target_link_libraries(ciolib ${SDL2_LIBRARY})
-			target_include_directories(ciolib PUBLIC ${SDL2_LIBRARY}/Headers)
-			target_include_directories(ciolib PUBLIC ${SDL2_LIBRARY})
+	if(SDL2_FOUND)
+		if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 			target_compile_definitions(ciolib PUBLIC STATIC_SDL)
-			target_compile_definitions(ciolib PUBLIC WITH_SDL)
 		endif()
-	else()
-		if(SDL2_FOUND)
-			target_include_directories(ciolib PUBLIC ${SDL2_INCLUDE_DIRS})
-			set(WITH_SDL TRUE PARENT_SCOPE)
-			target_compile_definitions(ciolib PUBLIC WITH_SDL)
-		endif()
+		target_include_directories(ciolib PUBLIC ${SDL2_INCLUDE_DIRS})
+		target_compile_definitions(ciolib PUBLIC WITH_SDL)
 	endif()
 endif()
 
@@ -207,7 +184,6 @@ if(USE_CURSES_ANYWAY)
 	endif()
 endif()
 
-CHECK_FUNCTION_EXISTS(vasprintf HAVE_VASPRINTF) 
 if(HAVE_VASPRINTF)
 	target_compile_definitions(ciolib PRIVATE HAVE_VASPRINTF)
 endif()
