Make CMake able to cross-build Win32 binaries on FreeBSD

--- a/src/xpdev/CMakeLists.txt
+++ b/src/xpdev/CMakeLists.txt
@@ -12,7 +12,12 @@ include(CheckSymbolExists)
 include(CheckIncludeFiles)
 find_package(Threads)
 if(NOT WITHOUT_SDL_AUDIO)
-	find_package(SDL2 CONFIG PATHS /Library/Frameworks)
+	if(WIN32)
+		set(SDL2_FOUND ON)
+		set(SDL2_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../../3rdp/win32.release/sdl2/include)
+	else()
+		find_package(SDL2 CONFIG PATHS /Library/Frameworks)
+	endif()
 endif()
 if(NOT WITHOUT_PULSEAUDIO)
 	find_package(PulseAudio CONFIG PATHS /usr/local)
@@ -101,7 +106,9 @@ if(NOT WITHOUT_SDL_AUDIO)
 	if(SDL2_FOUND)
 		list(APPEND SOURCE sdlfuncs.c)
 		if(WIN32)
-			list(APPEND SOURCE SDL_win32_main.c)
+			if(WITHOUT_SDL)
+				list(APPEND SOURCE SDL_win32_main.c)
+			endif()
 		endif()
 	endif()
 endif()
@@ -109,6 +116,7 @@ endif()
 check_symbol_exists(strlcpy string.h HAS_STRLCPY)
 check_symbol_exists(random stdlib.h HAS_RANDOM_FUNC) 
 check_symbol_exists(srandomdev stdlib.h HAS_SRANDOMDEV_FUNC)
+check_symbol_exists(mkstemp stdlib.h HAS_MKSTEMP_FUNC)
 
 check_include_files(inttypes.h HAS_INTTYPES_H)
 check_include_files(stdint.h HAS_STDINT_H)
@@ -204,6 +212,10 @@ endif()
 
 if(HAS_SRANDOMDEV_FUNC)
 	target_compile_definitions(xpdev PRIVATE HAS_SRANDOMDEV_FUNC)
+endif()
+
+if(HAS_MKSTEMP_FUNC)
+	target_compile_definitions(xpdev PRIVATE DISABLE_MKSTEMP_DEFINE)
 endif()
 
 if(NOT WITHOUT_SDL_AUDIO)
