--- a/src/conio/CMakeLists.txt
+++ b/src/conio/CMakeLists.txt
@@ -23,7 +23,12 @@ find_package(Curses)
 
 find_package(PkgConfig)
 if(NOT WITHOUT_SDL)
-	find_package(SDL2 CONFIG PATHS /Library/Frameworks)
+	if(WIN32)
+		set(SDL2_FOUND ON)
+		set(SDL2_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../../3rdp/win32.release/sdl2/include)
+	else()
+		find_package(SDL2 CONFIG PATHS /Library/Frameworks)
+	endif()
 endif()
 if(NOT WITHOUT_X11)
 	if(NOT WITHOUT_XRENDER)
@@ -61,8 +66,14 @@ set(HEADER
 
 if(WIN32)
 	if(NOT WITHOUT_GDI)
-		list(APPEND SOURCE win32cio.c)
+		list(APPEND SOURCE win32gdi.c)
+		if(WITHOUT_SDL)
+			list(APPEND SOURCE SDL_win32_main.c)
+		endif()
+		set(NEED_BITMAP TRUE)
+		set(NEED_SCALE TRUE)
 	endif()
+	list(APPEND SOURCE win32cio.c)
 	list(APPEND SOURCE ciolib.rc)
 endif()
 
@@ -80,7 +91,7 @@ else()
 	endif()
 endif()
 
-if(NOT WITHOUT_X1!)
+if(NOT WITHOUT_X11)
 	if(X11_FOUND)
 		list(APPEND SOURCE x_events.c x_cio.c)
 		set(NEED_BITMAP TRUE)
