Fix SDL2 linkage for Darwin.

--- a/src/conio/CMakeLists.txt
+++ b/src/conio/CMakeLists.txt
@@ -156,6 +156,7 @@ if(NOT WITHOUT_SDL)
 	if(SDL2_FOUND)
 		if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 			target_compile_definitions(ciolib PUBLIC STATIC_SDL)
+			target_link_libraries(ciolib SDL2::SDL2)
 		endif()
 		target_include_directories(ciolib PUBLIC ${SDL2_INCLUDE_DIRS})
 		target_compile_definitions(ciolib PUBLIC WITH_SDL)
