Remove spurious brace

--- a/src/xpdev/CMakeLists.txt
+++ b/src/xpdev/CMakeLists.txt
@@ -222,7 +222,7 @@ if(NOT WITHOUT_SDL_AUDIO)
 	if(SDL2_FOUND)
 		if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 			target_compile_definitions(xpdev PUBLIC STATIC_SDL)
-			target_link_libraries(xpdev SDL2::SDL2})
+			target_link_libraries(xpdev SDL2::SDL2)
 		endif()
 		target_include_directories(xpdev PUBLIC ${SDL2_INCLUDE_DIRS})
 		target_compile_definitions(xpdev PUBLIC WITH_SDL_AUDIO)
