Tie cryptlib cmake into syncterm cmake build
There's still some dependency weirdness on Linux, and cryptlib
won't automagically rebuild if the patches change, but it at least
works for an initial build, which is the primary use-case.

None of this has been tested on Windows yet.

--- a/.gitlab-ci-unix.yml
+++ b/.gitlab-ci-unix.yml
@@ -513,7 +513,7 @@ spec:
     - cd src/syncterm
     - mkdir build
     - cd build
-    - cmake ..
+    - cmake -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DFIXED_FIXED_SEED=ON ..
     - cmake --build .
   artifacts:
     name: "syncterm-cmake-$[[ inputs.os ]]-$[[ inputs.platform ]]"
