--- a/src/syncterm/CMakeLists.txt
+++ b/src/syncterm/CMakeLists.txt
@@ -45,38 +45,7 @@ set(SOURCE
 	../sbbs3/xmodem.c
 )
 
-if(WIN32)
-	set(3RDP_CRYPTLIB_LIB ${CMAKE_CURRENT_SOURCE_DIR}/../../3rdp/win32.release/cryptlib/bin/cl32.lib)
-else()
-	find_program(3RDP_GNU_MAKE
-		NAMES gmake make
-	)
-	if(${3RDP_GNU_MAKE} STREQUAL "3RDP_GNU_MAKE-NOTFOUND")
-		set(WITHOUT_CRYPTLIB ON CACHE BOOL "Disable cryptlib (ssh and telnet over TLS" FORCE)
-		message(WARNING "GNU Make not found, cannot build cryptlib")
-	else()
-		if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
-			set(BUILD_TYPE_FLAG DEBUG=1)
-		else()
-			set(BUILD_TYPE_FLAG RELEASE=1)
-		endif()
-		execute_process(
-			COMMAND ${3RDP_GNU_MAKE} -C ${CMAKE_CURRENT_SOURCE_DIR}/../build --no-print-directory DONT_CLOBBER_CC=please ${BUILD_TYPE_FLAG}
-			OUTPUT_FILE ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/paths.txt
-			ERROR_FILE ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/paths.err
-		)
-		file(STRINGS ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/paths.txt PATHS)
-		list(GET PATHS 0 LEGACY_LIBDIR)
-		list(GET PATHS 1 LEGACY_OBJDIR)
-		list(GET PATHS 2 LEGACY_MTOBJBDIR)
-		list(GET PATHS 3 LEGACY_EXEDIR)
-		list(GET PATHS 4 LEGACY_3RDPDIR)
-		add_custom_target(cryptlib
-			${3RDP_GNU_MAKE} cryptlib DONT_CLOBBER_CC=please  ${BUILD_TYPE_FLAG}
-			WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../3rdp/build
-		)
-	endif()
-endif()
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../3rdp/build ${CMAKE_CURRENT_SOURCE_DIR}/cryptlib EXCLUDE_FROM_ALL)
 
 if(NOT WITHOUT_OOII)
 	list(APPEND SOURCE ooii.c ooii_bmenus.c ooii_cmenus.c ooii_logons.c ooii_sounds.c)
@@ -89,9 +58,6 @@ endif()
 
 if(NOT WITHOUT_CRYPTLIB)
 	list(APPEND SOURCE ssh.c telnets.c)
-	if(WIN32)
-		find_library(3RDP_CRYPTLIB_LIB cl32 PATHS ${CMAKE_CURRENT_LIST_DIR}/../../3rdp/win32.release/cryptlib/bin NO_DEFAULT_PATH)
-	endif()
 endif()
 
 add_executable(syncterm MACOSX_BUNDLE ${SOURCE})
@@ -110,15 +76,7 @@ endif()
 if(WITHOUT_CRYPTLIB)
 	target_compile_definitions(syncterm PRIVATE WITHOUT_CRYPTLIB)
 else()
-	if(WIN32)
-		target_include_directories(syncterm PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../../3rdp/win32.release/cryptlib/include)
-		target_link_libraries(syncterm ${3RDP_CRYPTLIB_LIB})
-	else()
-		add_dependencies(syncterm cryptlib)
-		target_include_directories(syncterm PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../../3rdp/${LEGACY_3RDPDIR}/cl)
-		target_link_directories(syncterm PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../../3rdp/${LEGACY_3RDPDIR}/cl)
-		target_link_libraries(syncterm cl)
-	endif()
+	target_link_libraries(syncterm cl)
 endif()
 
 target_include_directories(syncterm PRIVATE ../sbbs3)
