Use the detected thread library, don't -pthread anything.

--- a/src/conio/CMakeLists.txt
+++ b/src/conio/CMakeLists.txt
@@ -167,8 +167,6 @@ if(WIN32)
 	if(NOT WITHOUT_GDI)
 		target_compile_definitions(ciolib PUBLIC WITH_GDI)
 	endif()
-else()
-	target_link_libraries(ciolib pthread)
 endif()
 
 if(USE_CURSES_ANYWAY)
@@ -199,4 +197,5 @@ endif()
 if(HAVE_VASPRINTF)
 	target_compile_definitions(ciolib PRIVATE HAVE_VASPRINTF)
 endif()
+target_link_libraries(ciolib ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries(ciolib hash encode xpdev)
