Initial Haiku support.
CMake only, has issues.

--- a/src/xpdev/CMakeLists.txt
+++ b/src/xpdev/CMakeLists.txt
@@ -134,7 +134,8 @@ if(WIN32)
 	target_compile_definitions(xpdev PUBLIC _WIN32 _WIN32_WINNT=0x0501 WINVER=0x0501 MSVCRT_VERSION=0x0501 _WIN32_IE=0x0500)
 	target_link_libraries(xpdev iphlpapi ws2_32 winmm netapi32)
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Haiku")
-	target_link_libraries(xpdev network m)
+	target_compile_definitions(xpdev PUBLIC __unix__ USE_SNPRINTF)
+	target_link_libraries(xpdev m network)
 elseif(CMAKE_SYSTEM_NAME STREQUAL "NetBSD")
 	target_link_libraries(xpdev m)
 	if(NOT WITHOUT_OSS)
