--- a/src/conio/CMakeLists.txt
+++ b/src/conio/CMakeLists.txt
@@ -154,6 +154,9 @@ endif()
 
 if(NOT WITHOUT_SDL)
 	if(SDL2_FOUND)
+		if(CMAKE_SYSTEM_NAME STREQUAL "Haiku")
+			target_link_options(ciolib INTERFACE LINKER:-rpath,/system/develop/lib)
+		endif()
 		if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 			target_compile_definitions(ciolib PUBLIC STATIC_SDL)
 			target_link_libraries(ciolib SDL2::SDL2)
