Create a .PackageInfo file for Haiku

--- a/src/syncterm/CMakeLists.txt
+++ b/src/syncterm/CMakeLists.txt
@@ -55,7 +55,10 @@ endif()
 if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
 	list(APPEND SOURCE DarwinWrappers.m)
 	find_library(FOUNDATION_LIBRARY Foundation)
+elseif(CMAKE_SYSTEM_NAME STREQUAL "Haiku")
+	execute_process(COMMAND uname -m OUTPUT_VARIABLE ARCHITECTURE_TYPE)
 endif()
+	execute_process(COMMAND uname -m OUTPUT_VARIABLE ARCHITECTURE_TYPE OUTPUT_STRIP_TRAILING_WHITESPACE)
 
 if(NOT WITHOUT_CRYPTLIB)
 	list(APPEND SOURCE ssh.c telnets.c)
@@ -63,6 +66,10 @@ endif()
 
 if(WIN32)
 	list(APPEND SOURCE syncterm.rc)
+endif()
+
+if(WIN32)
+	list(APPEND SOURCE haiku.rc)
 endif()
 
 if(WITHOUT_GDI AND WITHOUT_SDL)
@@ -106,6 +113,7 @@ elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Haiku")
 	target_link_libraries(syncterm network bsd)
 endif()
+	configure_file(PackageInfo.in ${CMAKE_CURRENT_BINARY_DIR}/.PackageInfo @ONLY)
 
 install(TARGETS syncterm DESTINATION bin)
 if(UNIX)
