And generate/use the Haiku rdef file

--- a/src/syncterm/CMakeLists.txt
+++ b/src/syncterm/CMakeLists.txt
@@ -56,9 +56,9 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
 	list(APPEND SOURCE DarwinWrappers.m)
 	find_library(FOUNDATION_LIBRARY Foundation)
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Haiku")
-	execute_process(COMMAND uname -m OUTPUT_VARIABLE ARCHITECTURE_TYPE)
-endif()
+	list(APPEND SOURCE haiku.rdef)
 	execute_process(COMMAND uname -m OUTPUT_VARIABLE ARCHITECTURE_TYPE OUTPUT_STRIP_TRAILING_WHITESPACE)
+endif()
 
 if(NOT WITHOUT_CRYPTLIB)
 	list(APPEND SOURCE ssh.c telnets.c)
@@ -112,8 +112,12 @@ elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
 	target_link_libraries(syncterm util)
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Haiku")
 	target_link_libraries(syncterm network bsd)
-endif()
 	configure_file(PackageInfo.in ${CMAKE_CURRENT_BINARY_DIR}/.PackageInfo @ONLY)
+	add_custom_command(TARGET syncterm PRE_LINK
+		COMMAND rc -o ${CMAKE_CURRENT_BINARY_DIR}/syncterm.rsrc ${CMAKE_CURRENT_SOURCE_DIR}/haiku.rdef)
+	add_custom_command(TARGET syncterm POST_BUILD
+		COMMAND xres =o $<TARGET_FILE:syncterm> ${CMAKE_CURRENT_BINARY_DIR}/syncterm.rsrc)
+endif()
 
 install(TARGETS syncterm DESTINATION bin)
 if(UNIX)
