Put the manpage in ${PREFIX}/share regardless of what PREFIX is.

--- a/src/syncterm/GNUmakefile
+++ b/src/syncterm/GNUmakefile
@@ -58,12 +58,11 @@ DESKTOPDIR ?= $(PREFIX)/share/applications
 CFLAGS	+=	-DPREFIX=\"${DESTDIR}${PREFIX}\"
 CFLAGS	+=	-DTELNET_NO_DLL
 ifeq ($(PREFIX),/usr)
- MANPREFIX ?= /usr/share
  SYSTEM_LIST_DIR ?= /etc
 else
- MANPREFIX ?= $(PREFIX)
  SYSTEM_LIST_DIR ?= ${PREFIX}/etc
 endif
+MANPREFIX ?= $(PREFIX)/share
 CFLAGS	+=	-DSYSTEM_LIST_DIR=\"${SYSTEM_LIST_DIR}\"
 
 CFLAGS	+=	$(UIFC-MT_CFLAGS) $(CIOLIB-MT_CFLAGS) $(XPDEV-MT_CFLAGS) $(ENCODE_CFLAGS) $(HASH_CFLAGS) -I../sbbs3 -I../comio
