Add configurable "LoginRequirements" (ARS format) per-service in services.ini
In response to Reddit inquiry in /r/bbs by wts42:
"is there a possibility in sbbs to restrict access to services like IMAP by
level or flag?"

... now there is.

This only works for services that use the JS login() method to authenticate
the user.

If the services server's LoginRequirements are set in the sbbs.ini file, then
*both* sets of requirements must be met to successfully login to a service.

--- a/ctrl/services.ini
+++ b/ctrl/services.ini
@@ -22,6 +22,7 @@ ListenBacklog=5
 ; Interface (default: network interface IP address specified in sbbs.ini [services])
 ; Host (default: unspecified) - only run on the specified hostname
 ; NotHost (default: unspecified) - do not run on the specified hostname
+; LoginRequirements (default: none) - access requirements (ARS) for logging-into this service
 
 ; Advanced JavaScript execution keys:
 ; JavaScriptMaxBytes
