Add mp4 MIME type mapping

--- a/ctrl/mime_types.ini
+++ b/ctrl/mime_types.ini
@@ -81,6 +81,7 @@ xsl	= text/xml
 mpg	= video/mpeg
 mpe	= video/mpeg
 mpeg	= video/mpeg
+mp4	= video/mp4
 qt	= video/quicktime
 mov	= video/quicktime
 mxu	= video/vnd.mpegurl
