Fix the 404 error retrying Micronet info packet (MININFO.ZIP not mininfo.zip)
I'm not sure if the file was renamed at some point or what, but apparently
it's currently named in ALL CAPS.

--- a/exec/init-fidonet.ini
+++ b/exec/init-fidonet.ini
@@ -239,7 +239,7 @@ areatax_prefix = IL_
 name  = Micronet
 desc  = laid-back, friendly and comfortable mail
 info  = https://minftn.net/
-pack = http://minftn.net/mininfo.zip
+pack = http://minftn.net/MININFO.ZIP
 coord = Sean Dennis
 email = zc@minftn.net
 fido  = 1:18/200
