DDMsgReader: Sorting of sub-boards when changing to another sub-board (for nelgin). Toggleable behavior to only show sub-boards with new messages in the indexed-mode newscan (for kdi4hw). Internal: Updated for bbs.msg_number and bbs.smb_curmsg being writeable in Synchronet 3.20.
The new configuration option subBoardChangeSorting specifies the sub-board sorting (None, Alphabetical, LatestMsgDateOldestFirst, or LatestMsgDateNewestFirst). This is a default for a user option that users can change for themselves.

The new configuration option indexedModeNewscanOnlyShowSubsWithNewMsgs sets the default setting for this behavior (true or false).

Updated for bbs.msg_number and bbs.smb_curmsg being writeable in Synchronet 3.20 - If these can be changed, there's no need to write the drop file DDML_SyncSMBInfo.txt containing information about the message being replied to etc. for message editors to use

--- a/xtrn/DDMsgReader/DDMsgReader.cfg
+++ b/xtrn/DDMsgReader/DDMsgReader.cfg
@@ -99,5 +99,14 @@ promptDelPersonalEmailAfterReply=false
 ; The default directory on the BBS machine to save messages to (for the sysop)
 msgSaveDir=
 
+; Sub-board sorting for changing to another sub-board: None, Alphabetical,
+; LatestMsgDateOldestFirst, or LatestMsgDateNewestFirst
+subBoardChangeSorting=None
+
+; For indexed-mode newscan, whether to only show sub-boards with new messages.
+; This is the default for a user setting; users can toggle this for themselves
+; as they like. Valid values are true or false.
+indexedModeNewscanOnlyShowSubsWithNewMsgs=false
+
 ; The theme file name (for colors, strings, etc.)
 themeFilename=DefaultTheme.cfg
