Update to new icon files for UNIX style installs
Also, fix manpage generation for CMake.

--- a/src/syncterm/CMakeLists.txt
+++ b/src/syncterm/CMakeLists.txt
@@ -68,8 +68,14 @@ if(WIN32)
 	list(APPEND SOURCE syncterm.rc)
 endif()
 
-if(WIN32)
-	list(APPEND SOURCE haiku.rc)
+if(UNIX)
+	FIND_PROGRAM(SED_BIN sed REQUIRED)
+	# TODO: I'm not sure how to make this work properly...
+	add_custom_command(OUTPUT syncterm.man
+		COMMAND ${SED_BIN} -E -e 's|%%DESTDIR%%|${DESTDIR}|g' -e 's|%%PREFIX%%|${CMAKE_INSTALL_PREFIX}|g' < ${CMAKE_CURRENT_SOURCE_DIR}/syncterm.man.in > ${CMAKE_CURRENT_BINARY_DIR}/syncterm.man
+		DEPENDS syncterm.man.in)
+	list(APPEND SOURCE syncterm.man.in)
+	list(APPEND SOURCE syncterm.man)
 endif()
 
 if(WITHOUT_GDI AND WITHOUT_SDL)
@@ -121,6 +127,17 @@ endif()
 
 install(TARGETS syncterm DESTINATION bin)
 if(UNIX)
+	install(FILES ${CMAKE_CURRENT_BINARY_DIR}/syncterm.man TYPE MAN)
 	install(FILES syncterm.desktop DESTINATION share/applications)
-	install(FILES syncterm.png DESTINATION share/icons/hicolor/64x64/apps)
+	install(FILES syncterm.desktop DESTINATION share/applications)
+	install(FILES syncterm16.png DESTINATION share/icons/hicolor/16x16/apps RENAME syncterm.png)
+	install(FILES syncterm22.png DESTINATION share/icons/hicolor/22x22/apps RENAME syncterm.png)
+	install(FILES syncterm24.png DESTINATION share/icons/hicolor/24x24/apps RENAME syncterm.png)
+	install(FILES syncterm32.png DESTINATION share/icons/hicolor/32x32/apps RENAME syncterm.png)
+	install(FILES syncterm36.png DESTINATION share/icons/hicolor/36x36/apps RENAME syncterm.png)
+	install(FILES syncterm48.png DESTINATION share/icons/hicolor/48x48/apps RENAME syncterm.png)
+	install(FILES syncterm64.png DESTINATION share/icons/hicolor/64x64/apps RENAME syncterm.png)
+	install(FILES syncterm256.png DESTINATION share/icons/hicolor/256x256/apps RENAME syncterm.png)
+	install(FILES icons/syncterm.svg DESTINATION share/icons/hicolor/scalable/apps)
+	install(FILES icons/syncterm-mini.svg DESTINATION share/icons/hicolor/scalable/apps)
 endif()
