DDFileLister: Made 'view file' from the xfer menu actually work when used as a loadable module (FL_VIEW). Updated extended information view for files. When used as a loadable module, choosing the 'view file' from the file transfer menu (which calls bbs.list_files() with the FL_VIEW bit), this is now implemented (previously, DDFileLister did nothing for FL_VIEW). Also, when viewing a file's extended information, more information is now displayed, to try to match Synchronet's stock file lister

--- a/xtrn/ddfilelister/ddfilelister.cfg
+++ b/xtrn/ddfilelister/ddfilelister.cfg
@@ -27,5 +27,9 @@ pauseAfterViewingFile=true
 ; won't display it after the lister exits
 blankNFilesListedStrIfLoadableModule=true
 
+; Whether or not to display uploader avatars in extended
+; information for files
+displayUserAvatars=true
+
 ; The name of the color theme configuration file
 themeFilename=defaultTheme.cfg
